# dmcpp

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: ModuleImport.cmake
include/: dmcpp_config.h  dmcpp_config.h.in
src/: dmcpp_module.cpp
test/: dmcpptest.cpp
test/dmatomicest/: dmatomictest.cpp
test/dmchronotest/: dmchronotest.cpp
test/dmfiletest/: dmfile.h  dmfiletest.cpp
test/dmfunctiontest/: dmfunctiontest.cpp
test/dmlambdatest/: dmlambdatest.cpp
test/dmmagictest/: dmmagictest.cpp
test/dmmaptest/: dmmaptest.cpp
test/dmpermutation/: dmpermutationtest.cpp
test/dmptrtest/: dmptrtest.cpp
test/dmsingletest/: dmsingleton.h  dmsingletontest.cpp
test/dmsorttest/: dmsorttest.cpp
test/dmstring/: dmstring.cpp
test/dmstringtest/: dmstringtest.cpp
test/dmthreadpooltest/: dmthreadpool.h  dmthreadpooltest.cc
test/dmthreadtest/: dmthreadtest.cpp
test/dmtupletest/: dmcast.h  dmtupletest.cpp
test/dmvarianttest/: dmvarianttest.cpp
